More notebooks added

--- a/05_MeanVariance.ipynb
+++ b/05_MeanVariance.ipynb
@@ -22,8 +22,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "845c646b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "L = [1, 2, 4, 6, 5, 4, 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "50847dd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.142857142857143\n",
+      "3.142857142857143\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.mean(L))\n",
+    "print(np.sum(L) / len(L))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "629aa27e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.122448979591836"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.var(L)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47131373",
    "metadata": {},
    "outputs": [],
    "source": []
